<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="play_game">Play Game</string>
    <string name="scissors">Scissors</string>
    <string name="paper">paper</string>
    <string name="rock">Rock</string>
    <string name="high_score">High Score:</string>
    <string name="current_score">Current Score:</string>
    <string name="winner">Winner</string>
    <string name="system">System</string>
    <string name="player">Player</string>
</resources>