<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFEFF"
    android:paddingLeft="64dp"
    android:paddingTop="16dp"
    android:paddingRight="64dp"
    android:paddingBottom="64dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/player"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/system"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewMe"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewComputer"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_weight="1" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#FF0000"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/current_score"
                     android:textSize="16sp"
                    android:textAlignment="textStart" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:text="@string/high_score"
                    android:textAlignment="textStart" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewCurScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewHighScore"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="textEnd" />

            </LinearLayout>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="Choose one:"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRock"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:backgroundTint="#80CBC4"
                android:text="@string/rock" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPaper"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:backgroundTint="#80CBC4"
                android:text="@string/paper" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnScissors"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textColor="#000"
                android:backgroundTint="#80CBC4"
                android:text="@string/scissors" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/play_button"
           />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>